syntax = "proto3";

package KPProto.Msg;

option optimize_for = LITE_RUNTIME;
option go_package = "github.com/bytelang/kplayer/types/core/msg";

message EventMessagePluginAdd {
  bytes path = 1;
  bytes unique = 2;
  bytes error = 3;
}

message EventMessagePluginRemove {
  bytes path = 1;
  bytes unique = 2;
  bytes error = 3;
}
